[package]
name = "disaster_mesh"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1.0.188", features = ["derive"] }
bincode = "1.3.3"
ring = "0.16.20"
ed25519-dalek = { version = "2.1.0", features = ["serde"] }
aes-gcm = "0.10.3"
sled = "0.34.7"
anyhow = "1.0.75"
tracing = "0.1.40"
async-trait = "0.1.79"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
rand = "0.8.5"
futures = "0.3"
base64ct = "=1.7.3"

[dev-dependencies]
tokio-test = "0.4" 